Fix shift-tab on tab-less lines, update styles

--- a/src/index.css
+++ b/src/index.css
@@ -62,21 +62,21 @@ html {
 }
 
 button {
-	background-color: #114;
+	background-color: #070737;
 	color: white;
-	border: 3px solid #003;
+	border: 3px solid #171747;
 	border-radius: 5px;
 	padding: 4px 10px;
 }
 
 button:hover {
-	background-color: #171750;
-	border: 3px solid #050540;
+	background-color: #101040;
+	border: 3px solid #202050;
 }
 
 button:active {
-	background-color: #227;
-	border: 3px solid #114;
+	background-color: #171747;
+	border: 3px solid #272755;
 }
 
 #header-text {
@@ -138,6 +138,10 @@ button:active {
 	width: 100%;
 	height: 100%;
 	resize: none;
+	border: 2px solid white;
+	border-left: none;
+	border-top: none;
+	border-bottom: none;
 }
 @media screen and (max-width: 600px) {
 	#outer {
@@ -358,6 +362,7 @@ td, th {
 	color: yellow;
 	display: block;
 	margin-top: 20px;
+	margin-bottom: 3px;
 	border-bottom: 3px solid #FFF5;
 }
 .settings-section-header:first-of-type {
@@ -452,7 +457,7 @@ a:active {
 div.horizontal {
 	display: flex;
 	gap: 10px;
-	align-items: center;
+	align-items: baseline;
 }
 @media screen and (max-width: 400px) {
 	div.horizontal {
